<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BabyMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="send_sms">Send SMS</string>
    <string name="make_phonecall">Make PhoneCall</string>
    <string name="number">Enter Phone Number</string>
    <string name="sens_lvl">Enter Sensitivity Level 0 to 100</string>
    <string name="explenation">A low value means that a low sound will trigger the baby alarm.</string>
    <string name="contuct_method">Contact Method</string>
    <string name="start">Start App</string>
    <string name="stop">Stop App</string>
    <string name="Take_pic">Take picture</string>
    <string name="delay">Waiting time between actions</string>
    <string name="set">Settings</string>
    <string name="sensitivity">Sensitivity volume control</string>
    <string name="empty">0</string>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
	<color name="pink">#FF00FF</color>
	<color name="light_pink">#FF66FF</color>
    <color name="light_blue">#33FFFF</color>

    <string-array name="time_arrays">
        <item>Every 1 minute</item>
        <item>Every 2 minutes</item>
        <item>Every 5 minutes</item>
        <item>Every 10 minutes</item>
        <item>Every 20 minutes</item>
        <item>Every 30 minutes</item>
    </string-array>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="choose">You may select Send SMS or Make PhoneCall. In addition you may add Take picture.</string>

</resources>
