
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/total_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/refresh_match_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_view_rounded_single"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sensitivity"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/volume_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="118dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/progressbar"
                android:secondaryProgress="0" />

            <TextView
                android:id="@+id/textViewNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/empty"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewExplain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/explenation"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/delayTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_view_rounded_single"
            android:orientation="horizontal"
            android:visibility="visible" >

            <TextView
                android:id="@+id/textViewDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delay"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/time_arrays"
                android:prompt="@string/app_name"
                 android:textColor="#ffffff"/>
        </LinearLayout>
    </LinearLayout>

